# custom-plotly-templates

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml
custom_plotly_templates/: __init__.py  _version.py  configs.py  render_config.py  templates.py
custom_plotly_templates/templates/: __init__.py  white.py
examples/: basic.ipynb
tests/: test_render_config.py  test_templates.py
