[tool.poetry]
name = "custom-plotly-templates"
version = "2.0.0"
description = "Custom templates and configurations for Plotly"

license = "MIT"

authors = [
    "Ruslan Mukhametshin <rusmux21@gmail.com>"
]

homepage = "https://github.com/rusmux/custom-plotly-templates"

keywords = ["plotly", "template", "config"]

readme = "README.md"
packages = [{ include = "custom_plotly_templates" }]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
plotly = ">=5.8.0"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
pytest = "^7.2.2"
yesqa = "^1.4.0"

[tool.black]
# for pre-commit hooks
line-length = 120
target-version = ["py38", "py39", "py310"]

[tool.isort]
# for pre-commit hooks
profile = 'black'
line_length = 120
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
